# scalarflow

./: .gitignore  Makefile  README.md  pyproject.toml
examples/: __init__.py  classification.py  quadratic.py  regression.py
src/micrograd/: __init__.py  scalar.py  visualisation.py
src/scalarflow/: __init__.py  nn.py  scalar.py  visualisation.py
src/scalarflow/nn/: __init__.py  base.py  init.py
src/scalarflow/nn/modules/: __init__.py  bce.py  huber.py  linear.py  mae.py  mse.py  relu.py  sequential.py  sigmoid.py  tanh.py
src/scalarflow/optim/: __init__.py  base.py  sgd.py
tests/: test_nn.py  test_scalar.py  test_visualisation.py
tests/nn/: test_bce.py  test_huber.py  test_init.py  test_linear.py  test_mae.py  test_mse.py  test_relu.py  test_sequential.py  test_sigmoid.py  test_tanh.py
tests/optim/: test_sgd.py
