[project]
name = "scalarflow"
version = "0.1.0"
description = "A pedagogical automatic differentiation library with scalar primitives"
readme = "README.md"
authors = [{ name = "Scott Stevenson", email = "scott@stevenson.io" }]
requires-python = ">=3.13"
dependencies = ["graphviz>=0.21"]

[dependency-groups]
dev = [
  "basedpyright>=1.31.0",
  "coverage>=7.10.1",
  "pytest>=8.4.1",
  "ruff>=0.12.5",
]

[build-system]
requires = ["uv_build>=0.8.2,<0.9.0"]
build-backend = "uv_build"

[tool.basedpyright]
typeCheckingMode = "recommended"
reportUnusedCallResult = false

[tool.ruff.format]
skip-magic-trailing-comma = true

[tool.ruff.lint]
ignore = ["D", "COM812", "FIX002", "TD003", "S311"]
select = ["ALL"]
allowed-confusables = ["×"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.ruff.lint.per-file-ignores]
"tests/**.py" = ["PLR2004", "S101"]
